--- a/app/src/main/res/menu/menu_bottom_nav_home.xml
+++ b/app/src/main/res/menu/menu_bottom_nav_home.xml
@@ -2,12 +2,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/homeFragment"
         android:icon="@drawable/ic_home"
         android:title="@string/bottom_nav_home" />
     <item
+        android:id="@+id/searchFragment"
         android:icon="@drawable/ic_search"
         android:title="@string/bottom_nav_search" />
     <item
+        android:id="@+id/libraryFragment"
         android:icon="@drawable/ic_outline_library"
         android:title="@string/bottom_nav_library" />
 
